--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,6 +23,12 @@ section
     border-color: transparent;
     height: 80px;
 }
+h1.baseline
+{
+  margin-top: 300px;
+  font-weight: bold;
+  font-size: 70px;
+}
 #form
 {
   margin-top: 200px;
