--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,9 @@
                   <li class="hidden">
                       <a href="#page-top"></a>
                   </li>
-
+                  <li class="page-scroll">
+                       <%= link_to "A propos" , apropos_path, :class => "#" %>
+                   </li>
               </ul>
           </div>
           <!-- /.navbar-collapse -->
