--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,7 @@
 <section>
-  
+  <div class="row">
+    <div class="text-center"><h1 class="baseline">Donnez vie à vos idées </h1><br><h2>Y penser c'est bien <br>
+       Y rêver c'est bien <br> Le faire c'est le vivre </h2> </div>
+
+  </div>
 </section>
