--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,45 +8,36 @@ section
     background-size: cover;
     background-repeat:no-repeat;
     color: white;
-
 }
-.navbar-default .navbar-brand, .navbar-default .navbar-brand:focus {
-    color: red;
-    font-size: 3em;
-    font-weight:  bold;
-
-}
-.navbar-default
-{
-    padding-top: 15px;
+.navbar-default {
+    padding-top: 20px;
     background-color: transparent;
     border-color: transparent;
-    height: 80px;
+    height: 100px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
-h1.baseline
-{
-  margin-top: 300px;
-  font-weight: bold;
-  font-size: 70px;
+.navbar-nav {
+    float: right;
+    margin: 0;
 }
-#form
+.navbar-default .navbar-brand
 {
-  margin-top: 200px;
+    color: red;
+    font-size: 40px;
+    font-weight: bold;
 }
-.form-control
-{
-    margin-bottom: 15px;
-    height: 50px;
+.cover-container {
+    width: 700px;
 }
-.form-control.text
+form.form-signin
 {
+  margin-top: 250px;
 
-    height: 80px;
 }
-.row
+.navbar-default .navbar-nav > li > a
 {
-  margin-left: 15px;
-  margin-right: 15px;
+    color: red;
 }
 /*
 
