--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,35 +13,34 @@
   </head>
 
   <body>
-    <div class="container">
-    </div>
+<div class="container">
+    <nav class="navbar navbar-default navbar-fixed-top">
 
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
-      <div class="container">
-          <!-- Brand and toggle get grouped for better mobile display -->
-          <div class="navbar-header page-scroll">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                  <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-              </button>
+     <div class="navbar-header">
+       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+         <span class="sr-only">Toggle navigation</span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+       </button>
+       <%= link_to "FabPeople", root_path, :class => "navbar-brand" %>
+     </div>
+     <div id="navbar" class="collapse navbar-collapse">
+       <ul class="nav navbar-nav">
+         <li><%= link_to "A propos" , apropos_path, :class => "link" %></li>
+         <li><%= link_to "Contact" , apropos_path, :class => "link" %></li>
+         <li><%= link_to "About" , apropos_path, :class => "link" %></li>
 
-                <%= link_to "FabPeople", root_path, :class => "navbar-brand" %>
-          </div>
+         <li class="dropdown">
 
-          <!-- Collect the nav links, forms, and other content for toggling -->
-          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav navbar-right">
-                  <li class="hidden">
-                      <a href="#page-top"></a>
-                  </li>
-                  <li class="page-scroll">
-                       <%= link_to "A propos" , apropos_path, :class => "#" %>
-                   </li>
-              </ul>
-          </div>
-          <!-- /.navbar-collapse -->
-      </div>
-      <!-- /.container-fluid -->
-  </nav>
+
+         </li>
+       </ul>
+     </div><!--/.nav-collapse -->
+   </div>
+ </nav>
+
+
 
     <%= yield %>
 
