--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,11 @@
 <section>
-  <div class="row">
-    <div class="text-center"><h1 class="baseline">Donnez vie à vos idées </h1><br><h2>Y penser c'est bien <br>
-       Y rêver c'est bien <br> Le faire c'est le vivre </h2> </div>
 
-  </div>
+  <div class="container">
+    <div class="col-md-offset-4 col-md-4">
+      <form class="form-signin">
+        <h2 class="form-signin-heading">Donnez vie à vos idées</h2>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      </form>
+      </div>
+    </div> <!-- /container -->
 </section>
